--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>J.A.T.E</title>
-    
       <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/codemirror.min.css">
       </link>
@@ -25,9 +24,9 @@
       </div>
      <h1> Just Another Text Editor</h1>
      
-      <div class="navbar-brand" 
-            ><img src="./assets/icons/icon_96x96.png"
-          /></div>
+      <div class="navbar-brand">
+        <img src="./assets/icons/icon_96x96.png"/>
+      </div>
     </nav>
 
     <main id="main">
