--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
      <h1> Just Another Text Editor</h1>
      
       <div class="navbar-brand">
-        <img src="./assets/icons/icon_96x96.png"/>
+        <img src="../src/assets/logo.png" style="width: 96px; height: 96px;"/>
       </div>
     </nav>
 
